--- a/milestone_reader/templates/milestones/view_history_multi_column.html
+++ b/milestone_reader/templates/milestones/view_history_multi_column.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 <!-- START: CONTENT -->{% block content %}
 <p>
-    <b>{{ milestone_count }}</b> older milestone{{ milestone_count|pluralize }} found for <b>{{ chosen_year}}</b>.  View <a href="{% url 'view_by_columns' %}">current milestones</a>.
+    <b>{{ milestone_count }}</b> older milestone{{ milestone_count|pluralize }} found for <b>{{ chosen_year}}</b>.  
         {#Issues: <b>{{ num_open_issues }}</b> open.  <b>{{ num_closed_issues }}</b> closed.#}
         {% if last_retrieval_time %}<br /><small><i>updated: {{ last_retrieval_time }}</i></small>{% endif %}
 
