--- a/milestone_reader/templates/milestones/milestone_column_content.html
+++ b/milestone_reader/templates/milestones/milestone_column_content.html
@@ -4,7 +4,7 @@
             <th>&nbsp;</th>
           
             {% for repo in sorted_repos %}
-             <th><a class="btn btn-primary btn-default" href="{% url 'view_single_repo_column' repo.github_name %}" data-toggle="popoverb" title="{{ repo }}" data-content-target="#repo-desc-{{ repo.id }}">{{ repo }}</a>
+             <th><a class="btn btn-primary btn-default" href="{% url 'view_single_repo' repo.github_name %}" data-toggle="popoverb" title="{{ repo }}" data-content-target="#repo-desc-{{ repo.id }}">{{ repo }}</a>
             {# <!-- hidden div with repository description.  shown when hovering over repo name--> #} 
             <div id="repo-desc-{{ repo.id }}" class="hide">{{ repo.description|linebreaksbr }}</div>   
              </th>
